fix: resolved SonarCloud and SpotBugs warnings